# HuLa

./: .editorconfig  .env  .env.dev  .env.development  .env.prod  .env.production  .eslintignore  .eslintrc.cjs  .gitattributes  .gitignore  .lintstagedrc.mjs  .npmrc  .prettierignore  .prettierrc  .release-it.js  .release-it.json  .rules  AI_STREAM_COMPLETE.md  AI_STREAM_IMPLEMENTATION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.en.md  README.md  README.zh-CN.md  SECURITY.md  biome.json  commitlint.config.cjs  docker-compose.yaml  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  test_websocket_background.md  tsconfig.json  tsconfig.node.json  (+4 more)
.cargo/: config  config.toml
.claude/: settings.local.json
.gitee/ISSUE_TEMPLATE/: bug.yml  bug_report.yml  feature.yml  feature_request.yml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  bug_report_cn.yml  feature_request.yml  feature_request_cn.yml
.github/workflows/: codecov.yml  codeql.yml  debug-build.yml  greetings.yml  pr-chatbot-review.yml  pr-copilot-review.yml  release.yml  rust-clippy.yml  scorecards.yml
.husky/: pre-commit  prepare-commit-msg
config/: .cz-config.cjs  cz-config.cjs
docs/: android_startup_guide.md  project_guide.md  qiniu-upload.md  release-config.md
locales/en/: agreement.json  announcement.json  auth.json  chat.json  chatHistory.json  components.json  dynamic.json  editor.json  emoticon.json  fileManager.json  home.json  login.json  menu.json  message.json  mobile_chat_setting.json  mobile_contact.json  mobile_edit_bio.json  mobile_edit_brithday.json  mobile_edit_profile.json  mobile_forget_code.json  mobile_home.json  mobile_my.json  mobile_mymessage.json  mobile_personal_info.json  mobile_personal_info_qr.json  mobile_photo.json  mobile_post.json  mobile_setting.json  mobile_tabbar.json  setting.json
locales/zh-CN/: agreement.json  announcement.json  auth.json  chat.json  (+27 more)
public/: hula-model-sw.js  icon.js
script/: updater.mjs
scripts/: check-all.js  check-dependencies.js  check-env.js  check-local.js  interactive-build-inquirer.js  link-skills.js
src/: App.vue  ChatRoom.vue  FriendDetail.vue  FriendsPanel.vue  HomePage.vue  MessageList.vue  MessagePanel.vue  SearchDetail.vue  main.ts  vite-env.d.ts
src-tauri/: .env  .gitignore  Cargo.toml  Info.plist  build.rs  db.sqlite  db.sqlite-journal  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  desktop.json  mobile.json
src-tauri/configuration/: base.yaml  local.yaml  production.yaml
src-tauri/copyright/: License.rtf  License.txt
src-tauri/docs/: README.en.md  README.md
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: im_config.rs  im_contact.rs  im_message.rs  im_message_mark.rs  im_room.rs  im_room_member.rs  im_user.rs  lib.rs  prelude.rs
src-tauri/icons/: icon.icns
src-tauri/icons/macos/: icon.icns
src-tauri/icons/macos/dark/: icon.icns
src-tauri/icons/macos/light/: icon.icns
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240101_000001_add_send_status.rs  m20241220_000002_add_token_field.rs  m20241220_000003_add_refresh_token_field.rs  m20250917_000001_update_msg_table.rs  m20250917_000002_add_thumbnail_path.rs
src-tauri/src/: common_cmd.rs  configuration.rs  error.rs  im_reqest_client.rs  im_request_client.rs  init.rs  lib.rs  main.rs  proxy.rs  timeout_config.rs  tray.rs  user_cmd.rs  utils.rs
src-tauri/src/command/: ai_command.rs  app_state_command.rs  chat_history_command.rs  contact_command.rs  database_command.rs  file_manager_command.rs  markdown_command.rs  message_command.rs  message_mark_command.rs  mod.rs  oauth_command.rs  request_command.rs  room_member_command.rs  setting_command.rs  token_helper.rs  upload_command.rs  user_command.rs
src-tauri/src/common/: files_meta.rs  init.rs  mod.rs  plugins.rs  sqlcipher.rs  tray.rs  window.rs
src-tauri/src/desktops/: app_event.rs  common_cmd.rs  directory_scanner.rs  init.rs  mod.rs  network_monitor.rs  tray.rs  video_thumbnail.rs  window_payload.rs
src-tauri/src/entity/: im_user.rs  prelude.rs
src-tauri/src/mobiles/: init.rs  keyboard.rs  mod.rs  splash.rs
src-tauri/src/mobiles/ios/: badge.rs  build_support.rs  mod.rs
src-tauri/src/pojo/: common.rs
src-tauri/src/repository/: im_config_repository.rs  im_contact_repository.rs  im_message_mark_repository.rs  im_message_repository.rs  im_room_member_repository.rs  im_user_repository.rs  mod.rs
src-tauri/src/utils/: linux_runtime_guard.rs  macos_runtime_guard.rs  mod.rs  sql_debug.rs  win_runtime_guard.rs
src-tauri/src/vo/: mod.rs  user_info.rs  vo.rs
src-tauri/src/websocket/: client.rs  commands.rs  manager.rs  message.rs  mod.rs  types.rs
src-tauri/src/webview_helper/: ios.rs  mod.rs
src-tauri/template/: installer.nsi  utils.nsh
tauri-plugin-hula/: Cargo.toml  README.md  package.json  rollup.config.js
tauri-plugin-hula/android/: build.gradle.kts
tauri-plugin-hula/android/src/androidTest/java/: ExampleInstrumentedTest.kt
tauri-plugin-hula/android/src/main/java/: Example.kt  ExamplePlugin.kt
tauri-plugin-hula/android/src/test/java/: ExampleUnitTest.kt
tauri-plugin-hula/examples/tauri-app/: package.json  vite.config.js
tauri-plugin-hula/examples/tauri-app/src/: App.svelte
tauri-plugin-hula/examples/tauri-app/src-tauri/: Cargo.toml
tauri-plugin-hula/examples/tauri-app/src-tauri/capabilities/: default.json
tauri-plugin-hula/examples/tauri-app/src-tauri/src/: lib.rs
tauri-plugin-hula/guest-js/: index.ts
tauri-plugin-hula/ios/: Package.swift  README.md
tauri-plugin-hula/ios/Sources/: ExamplePlugin.swift  LifecyclePlugin.swift
tauri-plugin-hula/ios/Tests/PluginTests/: PluginTests.swift
tauri-plugin-hula/permissions/autogenerated/: reference.md
tauri-plugin-hula/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
(+557 files in other folders)
