[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
entity.workspace = true

[dependencies.sea-orm-migration]
version = "1.1.0"
features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls"
]
